Worked on shell script unification under env.sh